cmake_minimum_required(VERSION 3.28)
project(OOP)

set(CMAKE_CXX_STANDARD 26)

add_executable(Factorial_with_recursion Factorial_with_recursion.cpp)
add_executable(Factorial_without_recursion Factorial_without_recursion.cpp)
add_executable(Fibonacci_with_recursion Fibonacci_with_recursion.cpp)
add_executable(Fibonacci_without_recursion Fibonacci_without_recursion.cpp)
add_executable(Hello_World Hello_World.cpp)
add_executable(addition_of_2_numbers addition_of_2_numbers.cpp)
add_executable(greeting greeting.cpp)