cmake_minimum_required(VERSION 3.28)
project(OOP)

set(CMAKE_CXX_STANDARD 26)

add_executable(Factorial_with_recursion Factorial_with_recursion.cpp)
add_executable(Factorial_without_recursion Factorial_without_recursion.cpp)
add_executable(Fibonacci_with_recursion Fibonacci_with_recursion.cpp)
add_executable(Fibonacci_without_recursion Fibonacci_without_recursion.cpp)
add_executable(Hello_World Hello_World.cpp)
add_executable(Addition_of_2_numbers addition_of_2_numbers.cpp)
add_executable(Greeting greeting.cpp)
add_executable(Complex complex.cpp)
add_executable(Student Student.cpp)
add_executable(Bank Bank.cpp)
add_executable(Inheritance Inheritance.cpp)
add_executable(Area Area.cpp)
add_executable(Linked_List Linked_List.cpp)
add_executable(Stack stack.cpp)